--- a/_data/globals.yml
+++ b/_data/globals.yml
@@ -2,8 +2,7 @@ home:
   header:
     headline: This is a headline
     call_to_action:
-      title: Check out our blog
-      link: /blog
-
+      title: This is a button
+      link: #
 footer:
-  love: 'Made with <span class="accent">❤</span>'
+  notice: Copyright © 2023 Canvas Medical Inc.
