--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Canvas Documentation
 description: Canvas Documentation
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-theme_color: '#c0ffee'
+theme_color: '#eee9d9'
 logo: assets/images/large-logo.png
 
 ### Google Analytics, and Cookie consent uncomment and put the API key
