--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -38,6 +38,11 @@ api_accounts:
    url: /api/security/
  - title: "Privacy"
    url: /api/privacy/
+documentation:
+ - title: "Collaboration"
+documentation_collaboration:
+ - title: Managing Tasks
+   url: /documentation/managing-tasks/
 guides:
  - title: "Guide page 1"
    url: /guides/just-another-guide/
