--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -40,6 +40,8 @@ api_accounts:
    url: /api/privacy/
 documentation:
  - title: "Collaboration"
+   url: #
+   identifier: documentation_collaboration
 documentation_collaboration:
  - title: Managing Tasks
    url: /documentation/managing-tasks/
