--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,18 +1,10 @@
 main:
-  - title: for developers
-    url: #
-    identifier: main_developers
-  - title: for users
-    url: #
-    identifier: main_resources
-main_resources:
-  - title: Platform Documentation
+  - title: Application Documentation
     url: /documentation/
   - title: Release Notes
     url: /release-notes/
   - title: Guides
     url: /guides/
-main_developers:
   - title: API
     url: /api/
   - title: SDKs
