docs: update docs for Yarn

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "npm run-script clean:project && webpack --env config=dev --progress --profile --color && concurrently \"webpack-dev-server --env config=dev\" \"bundle exec jekyll serve\"",
-    "build": "npm run-script clean:project && cross-env NODE_ENV=production webpack --env config=prod --progress --profile --color && cross-env JEKYLL_ENV=production bundle exec jekyll build --config _config.yml,_config_production.yml",
-    "build:pwa": "npm run-script clean:project && cross-env NODE_ENV=production webpack --env config=pwa --progress --profile --color && cross-env JEKYLL_ENV=pwa bundle exec jekyll build --config _config.yml,_config_production.yml && workbox generateSW config/sw.config.js --verbose",
+    "dev": "yarn clean:project && webpack --env config=dev --progress --profile --color && concurrently \"webpack-dev-server --env config=dev\" \"bundle exec jekyll serve\"",
+    "build": "yarn clean:project && cross-env NODE_ENV=production webpack --env config=prod --progress --profile --color && cross-env JEKYLL_ENV=production bundle exec jekyll build --config _config.yml,_config_production.yml",
+    "build:pwa": "yarn clean:project && cross-env NODE_ENV=production webpack --env config=pwa --progress --profile --color && cross-env JEKYLL_ENV=pwa bundle exec jekyll build --config _config.yml,_config_production.yml && workbox generateSW config/sw.config.js --verbose",
     "serve:dist": "http-server _site",
     "clean:project": "rimraf ./_site ./assets"
   },
