updated documentation page layout and fixed guide linking

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -340,6 +340,8 @@ documentation_config_clinical:
 guides:
  - title: "Just Another Guide"
    url: /guides/just-another-guide/
+ - title: "Care Modeling: Behavioral Health"
+   url: /guides/behavioralhealth/   
 sdk:
  - title: "SDK Intro`"
    url: /sdk/
