--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,7 @@ plugins:
   - jekyll-menus
   - jekyll-seo-tag
   - jekyll-sitemap
+  - jekyll-tabs
   - octopress-minify-html
 
 ### Exclude from processing
