add safety guide

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -353,10 +353,22 @@ guides_templates:
    url: /guides/primary_care/
    identifier: guides_templates_pc
 guides_templates_bh:
- - title: "Customizing Search Results"
+ - title: "Customize Search Results"
    url: /guides/customizgin-search-results/ 
+ - title: "Promote Patient Safety"
+   url: /guides/promote-patient-safety/  
  - title: "Team Based Care"
-   url: /guides/team-based-care/ 
+   url: /guides/team-based-care/
+ - title: "Optimize Patient Intake"
+   url: /guides/optimize-patient-intake/
+ - title: "External Scheduling"
+   url: /guides/external-scheduling/
+ - title: "Queue Based Workflows"
+   url: /guides/queu-based-workflows/
+ - title: "Manage Revenue Outside of Canvas"
+   url: /guides/outside-revenue/
+
+
 sdk:
  - title: "SDK Intro`"
    url: /sdk/
