--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
-/collections/_api/*				@canvas-medical/technical-documentation
+/collections/_api/*				@canvas-medical/technical-documentation @canvas-medical/interoperability
 /collections/_guides/*			@canvas-medical/technical-documentation
 /collections/_sdk/*				@canvas-medical/technical-documentation
